# FFmPegDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/demo/ffmpegjnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/media/: one_frame.h  x.java
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/player/: x.java
app/src/main/cpp/media/player/def_player/: player.cpp  player.h
app/src/main/cpp/media/render/: video_render.h
app/src/main/cpp/media/render/video/: video_render.h
app/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
app/src/main/cpp/media/render/video/opengl_render/: opengl_render.cpp  opengl_render.h
app/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
app/src/main/cpp/opengl/drawer/proxy/: drawer_proxy.cpp  drawer_proxy.h
app/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/utils/: const.h  logger.h  timer.c
app/src/main/java/com/demo/ffmpegjnidemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/demo/ffmpegjnidemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
